--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div style="position:absolute; overflow: hidden; padding: 2px; height: 24px; width:100%; top:0; background-color: white; display: flex; opacity: 0.3;">
       <h3 id="fileinfo">No file opened</h3>
       <div style="flex-grow: 1;"></div>
+      <div class="btn skip-btn">Skip 1000</div>
       <div class="btn download-btn"><img src="./download.svg"/></div>
     </div>
     <div style="position:absolute; overflow: hidden;height: 120px; width:100%; bottom:0; background-color: rgba(255,255,255,0.3); display: flex; justify-content: space-around;">
